---------------------------------------------------------------------------------------------------
Version: 1.1.2
  Features:
    - Added new upgrade for increasing the maximum Laser Fence length
  Bugfixes:
    - Fixed crash that occurred when a fence and a post died on the same tick
    - Fixed small enemies being able to walk through laser fences
    - Fixed laser fence selection box not being aligned with the grid
---------------------------------------------------------------------------------------------------
Version: 1.1.1
  Features:
    - Added floating text to notify when something is blocking a fence from connecting
  Bugfixes:
    - Fixed fences occasionally stopping one tile short of connecting to the next emitter
    - Fixed large obstructions not allowing fences to form after they have been removed
---------------------------------------------------------------------------------------------------
Version: 1.0.0
  Changes:
    - None, initial release.