@@ -24,11 +24,20 @@ laserfence-range-effect=Increases the range at which Laser Fences can connect by
 [mod-setting-name]
 laserfence-debug-text=Debug Text
 laserfence-solid-walls=Solid Walls
-laserfence-base-range=Default Fence Length
-laserfence-added-range=Fence Length Upgrade
+laserfence-base-range=Base Length
+laserfence-added-range=Length Upgrade
+laserfence-health=Health
+laserfence-base-damage=Damage
+laserfence-beam-weapon-scaling=Scale Damage with Beam Weapon Upgrades?
+laserfence-power=Power Consumption
 
 [mod-setting-description]
-laserfence-debug-text=Only useful for debugging, spams chat with event notifications.\nDefault: off
-laserfence-solid-walls=What if you could walk through the laser beams? I guess they wouldn't be very effective walls then, but we did add this setting so you could turn off collision.\nDefault: on
-laserfence-base-range=The maximum number of fence sections between two Laser Fence posts.\nDefault: 12
-laserfence-added-range=The amount of additional fence senctions granted by the Laser Fence Connection Range upgrade.\nDefault: 3
+laserfence-template=__1__\nDefault: __2__
+laserfence-debug-text=Whether to spam chat with debugging info and event notifications.
+laserfence-solid-walls=Whether fence segments should have collision. Without collision it's less of a fence and more of a decoration.
+laserfence-base-range=The maximum number of fence sections between two Laser Fence posts.
+laserfence-added-range=The amount of additional fence senctions granted by the Laser Fence Connection Range upgrade.
+laserfence-health=Laser Fence HP.
+laserfence-base-damage=Amount of damage that biters take from attacking the Laser Fence.
+laserfence-beam-weapon-scaling=Whether to have Laser Fence damage scaled by upgrades that apply to beam weapons.
+laserfence-power=The number of kW required to power a single Laser Fence post. Only the posts require power, not the fence segments. For reference, an Assembler 2 takes 150kW.
